--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fullcalendar/timegrid": "^6.1.20",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
+    "html-to-image": "^1.11.13",
     "next": "16.1.1",
     "papaparse": "^5.5.3",
     "react": "19.2.3",
