--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "papaparse": "^5.5.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-qr-code": "^2.0.18",
     "recharts": "^3.7.0",
     "resend": "^6.6.0"
   },
