--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fullcalendar/timegrid": "^6.1.20",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
+    "@yudiel/react-qr-scanner": "^2.5.1",
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.569.0",
     "next": "16.1.1",
